@@ -8,13 +8,12 @@
 
 #include "gabor.h"
 
+/* for uint32_t */
+#include <stdint.h>
+
 /* note that all this is taken from the paper JaH98 in ~/tex/bib/squizz.bib */
 /* (with my corrections!) */
 
-static double ***kernel11 = NULL;
-static double ***kernel12 = NULL;
-static double ***kernel21 = NULL;
-static double ***kernel22 = NULL;
 static int kernal_size[num_gabor_scales] = {gabor_kernel_size_0, gabor_kernel_size_1, gabor_kernel_size_2};
 
 void save_norm_double_pgm(double *double_im, int w, int h, char *fname) {
@@ -50,32 +49,11 @@ void save_norm_double_pgm(double *double_im, int w, int h, char *fname) {
 	free(norm_im);
 }
 
-void create_filter_kernels() {
+void create_filter_kernels(double ** kernelsxy) {
 
-	int i, j, n;
-	int x, x_c;
+	uint32_t i, j;
+	int32_t x, x_c; /* ints to force type promotion later */
 	double u0, u, v, sigma, theta;
-	char fname[256];
-
-	/* allocate space for all the filter kernels */
-	kernel11 = (double ***)malloc(num_gabor_scales*sizeof(double **));
-	kernel12 = (double ***)malloc(num_gabor_scales*sizeof(double **));
-	kernel21 = (double ***)malloc(num_gabor_scales*sizeof(double **));
-	kernel22 = (double ***)malloc(num_gabor_scales*sizeof(double **));
-	for (i = 0; i < num_gabor_scales; i++) {
-		kernel11[i] = (double **)malloc(num_gabors_per_scale*sizeof(double *));
-		for (j = 0; j < num_gabors_per_scale; j++)
-			kernel11[i][j] = (double *)malloc(kernal_size[i]*sizeof(double));
-		kernel12[i] = (double **)malloc(num_gabors_per_scale*sizeof(double *));
-		for (j = 0; j < num_gabors_per_scale; j++)
-			kernel12[i][j] = (double *)malloc(kernal_size[i]*sizeof(double));
-		kernel21[i] = (double **)malloc(num_gabors_per_scale*sizeof(double *));
-		for (j = 0; j < num_gabors_per_scale; j++)
-			kernel21[i][j] = (double *)malloc(kernal_size[i]*sizeof(double));
-		kernel22[i] = (double **)malloc(num_gabors_per_scale*sizeof(double *));
-		for (j = 0; j < num_gabors_per_scale; j++)
-			kernel22[i][j] = (double *)malloc(kernal_size[i]*sizeof(double));
-	}
 
 	/* now set the values of the kernels */
 	u0 = u00;
@@ -87,25 +65,31 @@ void create_filter_kernels() {
 			v = u0*sin(theta);
 			x_c = kernal_size[i]/2; /* since sizes are odd, this gives the
 									       centre value */
+
+			kernelsxy[(i*num_gabors_per_scale+j)] = (double *)malloc(kernal_size[i]*sizeof(double)*4);
 			for (x = 0; x < kernal_size[i]; x++) {
 				/* note that x is "y" for kernels 12 and 22 */
-				kernel11[i][j][x] = (1/(sqrt(2*M_PI)*sigma)*exp(-sq((x - x_c))/(2*sq(sigma)))*cos(2*M_PI*u*(x - x_c)));
-				kernel12[i][j][x] = (1/(sqrt(2*M_PI)*sigma)*exp(-sq((x - x_c))/(2*sq(sigma)))*cos(2*M_PI*v*(x - x_c)));
-				kernel21[i][j][x] = (1/(sqrt(2*M_PI)*sigma)*exp(-sq((x - x_c))/(2*sq(sigma)))*sin(2*M_PI*u*(x - x_c)));
-				kernel22[i][j][x] = (1/(sqrt(2*M_PI)*sigma)*exp(-sq((x - x_c))/(2*sq(sigma)))*sin(2*M_PI*v*(x - x_c)));
+				kernelsxy[(i*num_gabors_per_scale+j)][x] = (1/(sqrt(2*M_PI)*sigma)*exp(-sq((x - x_c))/(2*sq(sigma)))*cos(2*M_PI*u*(x - x_c)));
+				kernelsxy[(i*num_gabors_per_scale+j)][x+kernal_size[i]] = (1/(sqrt(2*M_PI)*sigma)*exp(-sq((x - x_c))/(2*sq(sigma)))*cos(2*M_PI*v*(x - x_c)));                    
+				kernelsxy[(i*num_gabors_per_scale+j)][x+kernal_size[i]*2] = (1/(sqrt(2*M_PI)*sigma)*exp(-sq((x - x_c))/(2*sq(sigma)))*sin(2*M_PI*u*(x - x_c)));
+				kernelsxy[(i*num_gabors_per_scale+j)][x+kernal_size[i]*3] = (1/(sqrt(2*M_PI)*sigma)*exp(-sq((x - x_c))/(2*sq(sigma)))*sin(2*M_PI*v*(x - x_c)));
 			}
 		}
 		u0 = u0/2;
 	}
 }
 
-void gabor_filter(double *image, int width, int height, int filter_scale, int n_theta, double *output) {
+void gabor_filter(double *image, int width, int height, int filter_scale, int orientation, double ** kernelsxy, double *output) {
 
 	double *conv;
 	int x, y, t_x, t_y;
 	int i;
+	double * target_kernal;
+
 
 	conv = (double *)calloc(width*height, sizeof(double));
+
+	target_kernal=kernelsxy[filter_scale*num_gabors_per_scale+orientation];
 
 	/* first convolution */
 	for (x = 0; x < width; x++) {
@@ -114,19 +98,20 @@ void gabor_filter(double *image, int width, int height, int filter_scale, int n_
 		for (t_x = -kernal_size[filter_scale]/2; t_x <= kernal_size[filter_scale]/2; t_x++) {
 			if (((x - t_x) >= 0) && ((x - t_x) < width)) {
 				conv[y*width + x] +=
-					kernel11[filter_scale][n_theta][t_x + kernal_size[filter_scale]/2]*image[65536-(y*width+ (x - t_x))];
+					target_kernal[t_x + kernal_size[filter_scale]/2]*image[65536-(y*width+ (x - t_x))];
 			}
 		}
 	}
 	}
 
+	target_kernal=&target_kernal[kernal_size[filter_scale]];
 	/* second convolution */
 	for (x = 0; x < width; x++) {
 	for (y = 0; y < height; y++) {
 		for (t_y = -kernal_size[filter_scale]/2; t_y <= kernal_size[filter_scale]/2; t_y++) {
 			if (((y - t_y) >= 0) && ((y - t_y) < height))
 				output[y*width + x] +=
-					kernel12[filter_scale][n_theta][t_y + kernal_size[filter_scale]/2]*conv[(y - t_y)*width + x];
+					target_kernal[t_y + kernal_size[filter_scale]/2]*conv[(y - t_y)*width + x];
 		}
 	}
 	}
@@ -134,25 +119,27 @@ void gabor_filter(double *image, int width, int height, int filter_scale, int n_
 	for (i = 0; i < width*height; i++)
 		conv[i] = 0;
 
+	target_kernal=&target_kernal[kernal_size[filter_scale]];
 	/* third convolution */
 	for (x = 0; x < width; x++) {
 	for (y = 0; y < height; y++) {
 		for (t_x = -kernal_size[filter_scale]/2; t_x <= kernal_size[filter_scale]/2; t_x++) {
 			if (((x - t_x) >= 0) && ((x - t_x) < width)) {
 				conv[y*width + x] +=
-				kernel21[filter_scale][n_theta][t_x + kernal_size[filter_scale]/2]*image[65536-(y*width + (x - t_x))];
+				        target_kernal[t_x + kernal_size[filter_scale]/2]*image[65536-(y*width + (x - t_x))];
 			}
 		}
 	}
 	}
 
+	target_kernal=&target_kernal[kernal_size[filter_scale]];
 	/* fourth convolution */
 	for (x = 0; x < width; x++) {
 	for (y = 0; y < height; y++) {
 		for (t_y = -kernal_size[filter_scale]/2; t_y <= kernal_size[filter_scale]/2; t_y++) {
 			if (((y - t_y) >= 0) && ((y - t_y) < height))
 				output[y*width + x] -=
-				kernel22[filter_scale][n_theta][t_y + kernal_size[filter_scale]/2]*conv[(y - t_y)*width + x];
+					target_kernal[t_y + kernal_size[filter_scale]/2]*conv[(y - t_y)*width + x];
 		}
 	}
 	}
